Filter CardHistories by date
