# api/controllers/cardHistoryController.js
@@ -3,15 +3,23 @@
 const CardHistory = require('./../model/model.js').CardHistory;
 
 function post(req, res, next) {
-  let updates = req.swagger.params.updates.value;
+  const updates = req.swagger.params.updates.value;
   return CardHistory
     .bulkCreate(updates.map(u => new CardHistory(u)))
     .then(() => res.send(204))
     .catch(next);
 }
 
-function get(_, res, next) {
-  return CardHistory.list()
+function get(req, res, next) {
+  const params = req.swagger.params;
+  const filter = {};
+  if(params.start.value) {
+    filter.start = params.start.value;
+  }
+  if(params.end.value) {
+    filter.end = params.end.value;
+  }
+  return CardHistory.list(filter)
     .then(list => res.send(200, list))
     .catch(next);
 }
